@@ -28,8 +28,8 @@ extern "C" {
 // "-8000000000000000"
 #define KERNAUX_ITOA16_BUFFER_SIZE 18
 
-char *kernaux_utoa(uint64_t value, char *buffer, int base);
-char *kernaux_itoa(int64_t  value, char *buffer, int base);
+char *kernaux_utoa(uint64_t value, char *buffer, int base, const char *prefix);
+char *kernaux_itoa(int64_t  value, char *buffer, int base, const char *prefix);
 
 void kernaux_utoa10(uint64_t value, char *buffer);
 void kernaux_itoa10(int64_t  value, char *buffer);
