@@ -10,9 +10,20 @@ pub const ITOA16_BUFFER_SIZE: usize = 18;
 #[link(name = "kernaux")]
 extern "C" {
     #[link_name = "kernaux_utoa"]
-    pub fn utoa(value: u64, buffer: *mut c_char, base: c_int) -> *mut c_char;
+    pub fn utoa(
+        value: u64,
+        buffer: *mut c_char,
+        base: c_int,
+        prefix: *const c_char,
+    ) -> *mut c_char;
     #[link_name = "kernaux_itoa"]
-    pub fn itoa(value: i64, buffer: *mut c_char, base: c_int) -> *mut c_char;
+    pub fn itoa(
+        value: i64,
+        buffer: *mut c_char,
+        base: c_int,
+        prefix: *const c_char,
+    ) -> *mut c_char;
+
     #[link_name = "kernaux_utoa10"]
     pub fn utoa10(value: u64, buffer: *mut c_char);
     #[link_name = "kernaux_itoa10"]
@@ -27,36 +38,105 @@ extern "C" {
 mod tests {
     use super::*;
 
-    use std::ffi::CStr;
+    use std::ffi::{CStr, CString};
+    use std::ptr::null;
+
+    fn empty_prefix() -> CString {
+        CString::new("").unwrap()
+    }
+
+    fn foo_prefix() -> CString {
+        CString::new("foo").unwrap()
+    }
 
     #[test]
     fn test_utoa() {
-        let mut buffer: [i8; UTOA_BUFFER_SIZE] = [0; UTOA_BUFFER_SIZE];
+        let mut buffer: [i8; UTOA_BUFFER_SIZE + 3] = [0; UTOA_BUFFER_SIZE + 3];
+
+        let empty_pfx = empty_prefix();
+        let foo_pfx = foo_prefix();
+
         let end: *mut c_char =
-            unsafe { utoa(0x123, buffer.as_mut_ptr(), 'x' as c_int) };
+            unsafe { utoa(0x123, buffer.as_mut_ptr(), 'x' as c_int, null()) };
         let result =
             unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
         assert_eq!(result, "123");
         assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(3) });
+
+        let end: *mut c_char = unsafe {
+            utoa(0x123, buffer.as_mut_ptr(), 'x' as c_int, empty_pfx.as_ptr())
+        };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "123");
+        assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(3) });
+
+        let end: *mut c_char = unsafe {
+            utoa(0x123, buffer.as_mut_ptr(), 'x' as c_int, foo_pfx.as_ptr())
+        };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "foo123");
+        assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(6) });
     }
 
     #[test]
     fn test_itoa() {
-        let mut buffer: [i8; ITOA_BUFFER_SIZE] = [0; ITOA_BUFFER_SIZE];
+        let mut buffer: [i8; ITOA_BUFFER_SIZE + 3] = [0; ITOA_BUFFER_SIZE + 3];
+
+        let empty_pfx = empty_prefix();
+        let foo_pfx = foo_prefix();
+
         let end: *mut c_char =
-            unsafe { itoa(0x123, buffer.as_mut_ptr(), 'x' as c_int) };
+            unsafe { itoa(0x123, buffer.as_mut_ptr(), 'x' as c_int, null()) };
         let result =
             unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
         assert_eq!(result, "123");
         assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(3) });
 
-        let mut buffer: [i8; 1000] = [0; 1000];
+        let end: *mut c_char = unsafe {
+            itoa(0x123, buffer.as_mut_ptr(), 'x' as c_int, empty_pfx.as_ptr())
+        };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "123");
+        assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(3) });
+
+        let end: *mut c_char = unsafe {
+            itoa(0x123, buffer.as_mut_ptr(), 'x' as c_int, foo_pfx.as_ptr())
+        };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "foo123");
+        assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(6) });
+
         let end: *mut c_char =
-            unsafe { itoa(-0x123, buffer.as_mut_ptr(), 'x' as c_int) };
+            unsafe { itoa(-0x123, buffer.as_mut_ptr(), 'x' as c_int, null()) };
         let result =
             unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
         assert_eq!(result, "-123");
         assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(4) });
+
+        let end: *mut c_char = unsafe {
+            itoa(
+                -0x123,
+                buffer.as_mut_ptr(),
+                'x' as c_int,
+                empty_pfx.as_ptr(),
+            )
+        };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "-123");
+        assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(4) });
+
+        let end: *mut c_char = unsafe {
+            itoa(-0x123, buffer.as_mut_ptr(), 'x' as c_int, foo_pfx.as_ptr())
+        };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "-foo123");
+        assert_eq!(end, unsafe { buffer.as_mut_ptr().offset(7) });
     }
 
     #[test]
